# wslnetman

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  architecture.md  build-and-run-windows.sh  build-windows.sh  build.rs  cargo_toml.md  ci.md  fix-app.ps1  fix-app.sh  install.ps1  install.sh  install_script.md  project_structure.md  project_summary.md  run-windows.sh  technical_plan.md  ui_design.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
installer/: install.nsi
src/: main.rs
src/network/: README.md  docker.rs  mod.rs
src/network/firewall/: README.md  mod.rs  windows.rs  wsl.rs
src/network/routing/: README.md  mod.rs  windows.rs  wsl.rs
src/network/selection/: README.md  mod.rs
src/network/windows/: mod.rs
src/network/wsl/: mod.rs
src/packet/: README.md  http.rs  mod.rs  ping.rs  response_display.md
src/ui/: main_ui.slint  types.slint
src/ui/components/: docker_network_detail_modal.slint  docker_tab.slint  network_detail_modal.slint  network_tab.slint
src/ui/styles/: table.slint
tests/: integration_tests.rs
